[package]
name = "killbill_client"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Kill Bill is an open-source billing and payments platform"
license = "Apache License, Version 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
